Bug 28854: Add ability to create and circulate item bundles
This patch adds the ability to attach item bundles to biblio records. Item
bundles can then be circulated as with normal items.

Upon attaching an item to one of these item bundles, the item is automatically
marked as not for loan at it's original host biblio record.

When returning a bundle, the list of items that are part of this bundle
will be displayed, and a verification form is exposed requireing the
librarian to scan item barcodes to verify their presence. Should a bundle
be found to have items missing they will be marked as lost.

Bundles can also be used in the inventory tool as a filter.

Test plan:
0.  Apply the patch, run updatedatabase + update_dbix_class_files
1.  Create a new bundle record.
1a. Create a biblio record with leader position 7 set to 'c' for collection.
1b. Create an item for this biblio record.
1c. You should now see a new 'Bundle' button next to the item in the holdings
    table.
    Test: Verify that this 'Bundle' button only appears for biblio's where leader
    position 7 is not 'c' for collection
1d. Use the new 'Bundle' button to trigger a modal allowing you to attach items
    to the bundle.
    Test: Enter a non-existant barcode, submit and confirm you recieve an error message.
    Test: Enter an existing barcode, submit and note the success message.
    Test: Enter the same barcode as above, submit and note the warning message.
    Test: Add a second item to the bib and try bundling one of the above
    items into this second item, note the error message.
2.  Open a new tab and look at the holdings data for one of the items you attached
    to a bundle in step 1.
    Test: Verify that the holdings status displays 'Not for loan'.
    Test: Verify that the holdings status show which bundle the item has been
    attached to.
3.  Perform a checkout on the first bundle item.
    Test: Checkout should proceed as normal, obeying the circulation
    rules for the item type you

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/inventory.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/inventory.tt
@@ -133,6 +133,17 @@
             [% END %]
             </select>
           </li>
+        [% IF items_bundles.size > 0 %]
+            <li>
+                <label for="items_bundle">Items bundle:</label>
+                <select id="items_bundle" name="items_bundle">
+                    <option value=""></option>
+                    [% FOREACH items_bundle IN items_bundles %]
+                        <option value="[% items_bundle.items_bundle_id | html %]">[% items_bundle.biblionumber.title | html %]</option>
+                    [% END %]
+                </select>
+            </li>
+        [% END %]
     </ol>
     </fieldset>
 
@@ -348,7 +359,8 @@
                     $('#locationloop').val() ||
                     $('#minlocation').val()  ||
                     $('#maxlocation').val()  ||
-                    $('#statuses input:checked').length
+                    $('#statuses input:checked').length ||
+                    $('#items_bundle').val()
                 ) ) {
                     return confirm(
                         _("You have not selected any catalog filters and are about to compare a file of barcodes to your entire catalog.") + "\n\n" +
@@ -486,6 +498,12 @@
                 e.preventDefault();
                 $(".branch_select").prop("checked",0);
             });
+        });
+    </script>
+    [% INCLUDE 'select2.inc' %]
+    <script>
+        $(document).ready(function () {
+            $('#items_bundle').select2();
         });
     </script>
 [% END %]
