--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/inventory.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/inventory.tt
@@ -107,6 +107,17 @@
             [% END %]
             </select>
           </li>
+        [% IF items_bundles.size > 0 %]
+            <li>
+                <label for="items_bundle">Items bundle:</label>
+                <select id="items_bundle" name="items_bundle">
+                    <option value=""></option>
+                    [% FOREACH items_bundle IN items_bundles %]
+                        <option value="[% items_bundle.items_bundle_id | html %]">[% items_bundle.biblionumber.title | html %]</option>
+                    [% END %]
+                </select>
+            </li>
+        [% END %]
     </ol>
     </fieldset>
 
@@ -302,7 +313,8 @@
                     $('#locationloop').val() ||
                     $('#minlocation').val()  ||
                     $('#maxlocation').val()  ||
-                    $('#statuses input:checked').length
+                    $('#statuses input:checked').length ||
+                    $('#items_bundle').val()
                 ) ) {
                     return confirm(
                         _("You have not selected any catalog filters and are about to compare a file of barcodes to your entire catalog.") + "\n\n" +
@@ -432,6 +444,12 @@
                     $("fieldset#optionalfilters").hide();
                 }
             });
+        });
+    </script>
+    [% INCLUDE 'select2.inc' %]
+    <script>
+        $(document).ready(function () {
+            $('#items_bundle').select2();
         });
     </script>
 [% END %]
