--- a/koha-tmpl/intranet-tmpl/prog/en/modules/course_reserves/course-details.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/course_reserves/course-details.tt
@@ -6,7 +6,7 @@
 [% USE TablesSettings %]
 [% SET footerjs = 1 %]
 [% INCLUDE 'doc-head-open.inc' %]
-<title>Koha &rsaquo; Course reserves &rsaquo; Course details for [% course.course_name | html %]</title>
+<title>Koha &rsaquo; Course reserves &rsaquo; Course details for [% course.course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%]</title>
 [% INCLUDE 'doc-head-close.inc' %]
 
 <style>
@@ -24,7 +24,7 @@
 [% INCLUDE 'header.inc' %]
 [% INCLUDE 'cat-search.inc' %]
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/course_reserves/course-reserves.pl">Course reserves</a> &rsaquo; Course details for <em>[% course.course_name | html %]</em></div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/course_reserves/course-reserves.pl">Course reserves</a> &rsaquo; Course details for <em>[% course.course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%]</em></div>
 
     <div class="main container-fluid">
         <div class="row">
