--- a/koha-tmpl/intranet-tmpl/prog/en/modules/course_reserves/course.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/course_reserves/course.tt
@@ -1,6 +1,6 @@
 [% SET footerjs = 1 %]
 [% INCLUDE 'doc-head-open.inc' %]
-<title>Koha &rsaquo; Course reserves &rsaquo; [% IF course_name %] Edit [% course_name | html %] [% ELSE %] New course [% END %]</title>
+<title>Koha &rsaquo; Course reserves &rsaquo; [% IF course_name %] Edit [% course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%] [% ELSE %] New course [% END %]</title>
 [% INCLUDE 'doc-head-close.inc' %]
 <style>
     #course_instructors {
@@ -17,7 +17,7 @@
 [% INCLUDE 'header.inc' %]
 [% INCLUDE 'cat-search.inc' %]
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/course_reserves/course-reserves.pl">Course reserves</a> &rsaquo; [% IF course_name %] Edit <em>[% course_name | html %]</em> [% ELSE %] New course [% END %]</div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/course_reserves/course-reserves.pl">Course reserves</a> &rsaquo; [% IF course_name %] Edit <em>[% course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%]</em> [% ELSE %] New course [% END %]</div>
 
 [% IF ( departments ) %]
 
