--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-course-details.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-course-details.tt
@@ -7,7 +7,7 @@
 [% USE Branches %]
 [% USE TablesSettings %]
 [% INCLUDE 'doc-head-open.inc' %]
-<title>[% IF ( LibraryNameTitle ) %][% LibraryNameTitle | html %][% ELSE %]Koha online[% END %] catalog &rsaquo; Course reserves for [% course.course_name | html %]</title>
+<title>[% IF ( LibraryNameTitle ) %][% LibraryNameTitle | html %][% ELSE %]Koha online[% END %] catalog &rsaquo; Course reserves for [% course.course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%]</title>
 [% INCLUDE 'doc-head-close.inc' %]
 [% BLOCK cssinclude %]
     [% Asset.css("css/datatables.css") | $raw %]
@@ -27,7 +27,7 @@
                 <a href="/cgi-bin/koha/opac-course-reserves.pl">Course reserves</a>
             </li>
             <li class="breadcrumb-item" aria-current="page">
-                Course reserves for &nbsp;<em>[% course.course_name | html %]</em>
+                Course reserves for &nbsp;<em>[% course.course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%]</em>
             </li>
         </ul>
     </nav>
@@ -37,7 +37,7 @@
             <div class="col">
                 <div id="course_reserves" class="maincontent">
 
-                    <h2>Course reserves for <em>[% course.course_name | html %]</em></h2>
+                    <h2>Course reserves for <em>[% course.course_name | html %][%- IF course.section -%] - [% course.section | html %][%- END -%]</em></h2>
                     <div class="rows">
                         <ol>
                             [% IF ( course.term ) %]<li><span class="label">Term:</span> [% AuthorisedValues.GetByCode( 'TERM', course.term, 1 ) | html %]</li>[% END %]
