--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/guided_reports_start.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/guided_reports_start.tt
@@ -273,7 +273,7 @@
                                                         [% savedreport.subgroupname | html %]
                                                     </td>
                                                     <td class="report_notes">
-                                                        [% savedreport.notes | html %]
+                                                        [% savedreport.notes | $raw %]
                                                     </td>
                                                     <td>
                                                         [% savedreport.borrowersurname | html %]
@@ -760,7 +760,7 @@
                             <input type='hidden' name='reportname' value='[% reportname | html %]' />
                             <input type='hidden' name='group' value='[% group | html %]' />
                             <input type='hidden' name='subgroup' value='[% subgroup | html %]' />
-                            <input type='hidden' name='notes' value='[% notes | html %]' />
+                            <input type='hidden' name='notes' value='[% notes | $raw %]' />
                             <input type='hidden' name='cache_expiry' value='[% cache_expiry | html %]' />
                             <input type='hidden' name='cache_expiry_units' value='[% cache_expiry_units | html %]' />
                             <input type='hidden' name='public' value='[% public | html %]' />
@@ -799,7 +799,7 @@
                             <input type='hidden' name='phase' value='Run this report' />
                             <h1>Enter parameters for report [% name | html %]:</h1>
                             [% IF ( notes ) %]
-                                <p>[% notes | html %]</p>
+                                <p>[% notes | $raw %]</p>
                             [% END %]
                             <fieldset class="rows">
                                 <ol>
@@ -840,7 +840,7 @@
                 [% IF ( execute ) %]
                     <h1>[% name | html %] <span id="report_id">([% id | html %])</span></h1>
                     [% IF ( notes ) %]
-                        <p><span class="label">Notes:</span> [% notes | html %]</p>
+                        <p><span class="label">Notes:</span> [% notes | $raw %]</p>
                     [% END %]
                     [% IF ( unlimited_total ) %]
                         <p>
@@ -1091,7 +1091,7 @@
                                 [% END # /IF (usecache) %]
                                 <li>
                                     <label for="notes">Notes:</label>
-                                    <textarea id="notes" name="notes" cols="50" rows="2">[% notes | html %]</textarea>
+                                    <textarea id="notes" name="notes" cols="50" rows="2">[% notes | $raw %]</textarea>
                                 </li>
                             </ol>
                         </fieldset> <!-- /.rows -->
@@ -1115,7 +1115,7 @@
                 [% IF saved_results %]
                     <h1>Saved report results</h1>
                     <h2>[% name | html %]</h2>
-                    <p>[% notes | html %]</p>
+                    <p>[% notes | $raw %]</p>
                     <table>
                         [% FOREACH rows IN saved_results %]
                             <tr>
@@ -1134,7 +1134,7 @@
                             [% IF ( notes ) %]
                                 <li>
                                     <span class="label">Notes:</span>
-                                    [% notes | html %]
+                                    [% notes | $raw %]
                                 </li>
                             [% ELSE %]
                             [% END %]
@@ -1201,7 +1201,7 @@
                                 [% END %]
                                 <li>
                                     <label for="notes">Notes:</label>
-                                    <textarea id="notes" name="notes" cols="50" rows="2">[% notes | html %]</textarea>
+                                    <textarea id="notes" name="notes" cols="50" rows="2">[% notes | $raw %]</textarea>
                                 </li>
                             </ol>
                         </fieldset> <!-- /.rows -->
