--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
@@ -1381,6 +1381,7 @@ Note that permanent location is a code, and location may be an authval.
 
         [% IF bundlesEnabled %]
         var bundle_columns = [% TablesSettings.GetColumns('catalogue', 'detail','bundle_tables','json') | $raw %];
+        var bundle_lost_value = [% Koha.Preference('BundleLostValue') %];
         [% END %]
         $(document).ready(function() {
 
@@ -1469,10 +1470,10 @@ Note that permanent location is a code, and location may be an authval.
                             "searchable": false,
                             "orderable": true,
                             "render": function(data, type, row, meta) {
-                                if ( row.lost_status ) {
-                                    return "Lost: " + row.lost_status;
+                                if ( row.lost_status == bundle_lost_value ) {
+                                    return "Last seen: " + row.last_seen_date;
                                 }
-                                return "";
+                                return "Present";
                             }
                         },
                         {
