EXPERIMENT: Make timeline editable

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/bookings/list.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/bookings/list.tt
@@ -99,6 +99,7 @@
                         start: booking.start_date,
                         end: booking.end_date,
                         content: 'Booking: ' + booking.booking_id,
+                        editable: true,
                         type: 'range',
                         group: booking.item_id ? booking.item_id : 0
                     });
