--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -2302,6 +2302,10 @@ td {
     display: block;
 }
 
+td.bundle {
+    background-color: #FFC !important;
+}
+
 .datedue {
     color: #999;
     display: block;
